# Design-Pilot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  setup-windows.ps1  setup-windows.sh
.github/workflows/: ci.yml
Design-Pilot-main/: .env.example
Design-Pilot-main/alembic/versions/: 0001_initial.py
Design-Pilot-main/app/: main.py
Design-Pilot-main/app/audit/: __init__.py
Design-Pilot-main/app/core/: logging.py
Design-Pilot-main/app/data/: materials.py
Design-Pilot-main/app/engines/: cost.py  simulation.py
Design-Pilot-main/app/iam/: __init__.py
Design-Pilot-main/app/models/: design.py  knowledge.py  user.py
Design-Pilot-main/app/services/: llm_client.py  pipeline.py
Design-Pilot-main/frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
Design-Pilot-main/frontend/src/: App.tsx  main.tsx
Design-Pilot-main/sandbox/: Dockerfile  runner.py
Design-Pilot-main/scripts/: init_db.sql  mint_dev_token.py
Design-Pilot-main/tests/: __init__.py  conftest.py
Design-Pilot-main/tests/integration/: conftest.py  test_rls.py
Design-Pilot-main/tests/security/: test_llm_schemas.py
Design-Pilot-main/tests/unit/: test_audit_redaction.py  test_config.py  test_llm_client.py  test_output_validator.py  test_permissions.py  test_rate_limit.py  test_sandbox_dev_skip.py  test_triple_lock.py
alembic/: env.py  script.py.mako
alembic/versions/: 0002_fix_rls_team_members_recursion.py  0003_stripe_customer_id.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  admin.py  billing.py  designs.py  designs_stream.py  health.py
app/audit/: middleware.py  service.py
app/core/: __init__.py  config.py  db.py  paths.py  rate_limit.py  redis_client.py  units.py
app/data/: __init__.py
app/engines/: __init__.py  bracket_generator.py  dfm.py  formulas.py
app/iam/: deps.py  permissions.py
app/models/: __init__.py  audit.py  material.py  user.py
app/services/: __init__.py  ast_validator.py  llm_schemas.py  output_validator.py  sandbox.py  storage.py  triple_lock.py
frontend/: tsconfig.app.json  tsconfig.json
frontend/src/: index.css  vite-env.d.ts
frontend/src/lib/: supabase.ts  utils.ts
frontend/src/pages/: Auth.tsx  Dashboard.tsx  Landing.tsx  Studio.tsx
scripts/: seed_materials.py
tests/: conftest.py
tests/engineering/: test_formulas.py
tests/integration/: test_ai_endpoints.py  test_designs_api.py  test_health.py  test_materials_api.py  test_materials_recommend_api.py  test_pipeline.py  test_schema.py
tests/security/: test_ast_validator.py  test_sandbox_command.py
tests/unit/: test_storage.py  test_units.py
(+12 files in other folders)
